# Thesis

./: .gitignore  README.md  pyproject.toml
configs/: default_experiment.json  smoke_experiment.json  transformer_followup_experiment.json  transformer_small_experiment.json  transformer_tuning_experiment.json
docs/: problem_statement.md  thesis_complete_summary_1_to_100.txt
scripts/: generate_alignment_evidence.py  generate_progress_report.py  run_pipeline.py
surrogate_thesis/: __init__.py  config.py  pipeline.py
surrogate_thesis/controller/: __init__.py  hybrid_controller.py  surrogate_decorator.py
surrogate_thesis/data/: __init__.py  dataset.py
surrogate_thesis/evaluation/: __init__.py  evaluator.py  metrics.py  plots.py
surrogate_thesis/models/: __init__.py  baselines.py  sequence.py  transformer.py
surrogate_thesis/simulation/: __init__.py  component_interface.py  reference_simulator.py
surrogate_thesis/training/: __init__.py  trainer.py
tests/: test_dataset.py  test_decorator.py  test_simulator.py  test_smoke.py
